fix: fix modal width overflow on mobile

--- a/src/components/EventModal/index.less
+++ b/src/components/EventModal/index.less
@@ -72,12 +72,18 @@
 
 @media screen and (max-width: 1200px) {
   .modal-container {
-    min-width: 600px;
+    min-width: 60vw;
   }
 }
 @media screen and (max-width: 900px) {
   .modal-container {
-    min-width: 400px;
+    min-width: 80vw;
+    padding: 1rem 2rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .modal-container {
+    min-width: 95vw;
     padding: 1rem 2rem;
   }
 }
